syntax = "proto3";

package connector;
import "common/probe.proto";

option go_package = "proto";

service ConnectorApi {
  rpc HandleEvent(common.EventRequest) returns (common.EventResponse) {}
  rpc Probe(common.ProbeRequest) returns (common.ProbeResponse) {}
}